--- a/MyConfigs/.ideavimrc
+++ b/MyConfigs/.ideavimrc
@@ -47,12 +47,12 @@ map <leader>rd <Action>(Debug)
 map <leader>rt <Action>(RunTests)
 map <leader>rs <Action>(Stop)
 map <leader>rn <Action>(RenameElement)
-map <leader>rc <Action>(ReformatCode)
 nmap <leader>re <Action>(Refactorings.QuickListPopupAction)
 map <leader>rf <Action>(RecentFiles)
 map <leader>rl <Action>(RecentLocations)
 map <leader>rp <Action>(RecentProjects)
 map <leader>a <Action>(GotoAction)
+map <leader>v <Action>(Vcs.QuickListPopupAction)
 nmap <leader>fu <Action>(FindUsages)
 map <leader>uw <Action>(Unwrap)
 map <leader>sw <Action>(SurroundWith)
@@ -71,6 +71,7 @@ map <leader>w <Action>(HideAllWindows)
 nmap <leader>of <Action>(OpenFile)
 nmap <leader>oi <Action>(OptimizeImports)
 nmap <leader>om <Action>(OverrideMethods)
+nmap <leader>im <Action>(ImplementMethods)
 map <leader>mj <Action>(MoveTabDown)
 map <leader>mk <Action>(MoveTabUp)
 map <leader>mh <Action>(MoveTabLeft)
@@ -98,6 +99,10 @@ nmap gD <Action>(GotoTypeDeclaration)
 nmap gi <Action>(GotoImplementation)
 nmap gL <Action>(QuickImplementations)
 nmap gs <Action>(GotoSuperMethod)
+
+" backslash
+nmap \\g <Action>(Generate)
+nmap \\f <Action>(ReformatCode)
 
 " Ctrl
 map <C-a> ggVG"+y
