FIX recent projects

--- a/MyConfigs/.ideavimrc
+++ b/MyConfigs/.ideavimrc
@@ -53,7 +53,7 @@ map <leader>rn <Action>(RenameElement)
 nmap <leader>re <Action>(Refactorings.QuickListPopupAction)
 map <leader>rf <Action>(RecentFiles)
 map <leader>rl <Action>(RecentLocations)
-map <leader>rp <Action>(RecentProjects)
+map <leader>rp <Action>(ManageRecentProjects)
 map <leader>a <Action>(GotoAction)
 map <leader>v <Action>(Vcs.QuickListPopupAction)
 nmap <leader>fu <Action>(FindUsages)
