--- a/MyConfigs/.ideavimrc
+++ b/MyConfigs/.ideavimrc
@@ -36,53 +36,58 @@ map <space> <nop>
 let mapleader="\<space>"
 
 " Leader
-nmap <leader>1 <Action>(GoToTab1)
-nmap <leader>2 <Action>(GoToTab2)
-nmap <leader>3 <Action>(GoToTab3)
-nmap <leader>4 <Action>(GoToTab4)
-nmap <leader>5 <Action>(GoToTab5)
-nmap <leader>6 <Action>(GoToTab6)
-nmap <leader>7 <Action>(GoToTab7)
-nmap <leader>8 <Action>(GoToTab8)
-nmap <leader>9 <Action>(GoToTab9)
+map <leader>1 <Action>(GoToTab1)
+map <leader>2 <Action>(GoToTab2)
+map <leader>3 <Action>(GoToTab3)
+map <leader>4 <Action>(GoToTab4)
+map <leader>5 <Action>(GoToTab5)
+map <leader>6 <Action>(GoToTab6)
+map <leader>7 <Action>(GoToTab7)
+map <leader>8 <Action>(GoToTab8)
+map <leader>9 <Action>(GoToTab9)
 map <leader>bp <Action>(ToggleLineBreakpoint)
-nmap <leader>bd <Action>(CloseEditor)
-nmap <leader>ba <Action>(CloseAllEditors)
-nmap <leader>bo <Action>(CloseAllEditorsButActive)
+map <leader>bt <Action>(ToggleTemporaryLineBreakpoint)
+map <leader>bd <Action>(CloseEditor)
+map <leader>ba <Action>(CloseAllEditors)
+map <leader>bo <Action>(CloseAllEditorsButActive)
 map <leader>rr <Action>(Run)
+map <leader>rc <Action>(ChooseRunConfiguration)
 map <leader>rd <Action>(Debug)
 map <leader>rt <Action>(RunTests)
 map <leader>rs <Action>(Stop)
 map <leader>rn <Action>(RenameElement)
-nmap <leader>re <Action>(Refactorings.QuickListPopupAction)
+map <leader>re <Action>(Refactorings.QuickListPopupAction)
 map <leader>rf <Action>(RecentFiles)
 map <leader>rl <Action>(RecentLocations)
 map <leader>rp <Action>(ManageRecentProjects)
 map <leader>a <Action>(GotoAction)
 map <leader>v <Action>(Vcs.QuickListPopupAction)
-nmap <leader>fu <Action>(FindUsages)
+map <leader>fu <Action>(FindUsages)
+map <leader>fs <Action>(FileStructurePopup)
 map <leader>uw <Action>(Unwrap)
 map <leader>sw <Action>(SurroundWith)
-map <leader>sp <Action>(FileStructurePopup)
-nmap <leader>sd <Action>(SafeDelete)
-nmap <leader>su <Action>(ShowUsages)
+map <leader>sd <Action>(SafeDelete)
+map <leader>su <Action>(ShowUsages)
 map <leader>sf <Action>(ShowFilePath)
+map <leader>si <Action>(SelectIn)
+map <leader>sh <Action>(MoveTabLeft)
+map <leader>sj <Action>(MoveTabDown)
+map <leader>sk <Action>(MoveTabUp)
+map <leader>sl <Action>(MoveTabRight)
 map <leader>hl <Action>(HighlightUsagesInFile)
 map <leader>c <Action>(CommentByLineComment)
 map <leader>qf <Action>(ShowIntentionActions)
 map <leader>qp <Action>(QuickPreview)
-map <leader>qt <Action>(QuickTypeDefinition)
-nmap <leader>g <Action>(ShowErrorDescription)
-nmap <leader>jd <Action>(QuickJavaDoc)
+map <leader>qd <Action>(QuickDefinition)
+map <leader>qD <Action>(QuickTypeDefinition)
+map <leader>g <Action>(ShowErrorDescription)
 map <leader>w <Action>(HideAllWindows)
-nmap <leader>of <Action>(OpenFile)
-nmap <leader>oi <Action>(OptimizeImports)
-nmap <leader>om <Action>(OverrideMethods)
-nmap <leader>im <Action>(ImplementMethods)
-map <leader>mj <Action>(MoveTabDown)
-map <leader>mk <Action>(MoveTabUp)
-map <leader>mh <Action>(MoveTabLeft)
-map <leader>ml <Action>(MoveTabRight)
+map <leader>of <Action>(OpenFile)
+map <leader>oi <Action>(OptimizeImports)
+map <leader>om <Action>(OverrideMethods)
+map <leader>im <Action>(ImplementMethods)
+map <leader>mj <Action>(MoveStatementDown)
+map <leader>mk <Action>(MoveStatementUp)
 
 " []
 nmap [g <Action>(GotoPreviousError)
@@ -113,6 +118,7 @@ nmap gs <Action>(GotoSymbol)
 " Backslash
 nmap \\g <Action>(Generate)
 nmap \\f <Action>(ReformatCode)
+nmap \\o <Action>(SelectAllOccurrences)
 nmap \\ch <Action>(CallHierarchy)
 nmap \\mh <Action>(MethodHierarchy)
 nmap \\th <Action>(TypeHierarchy)
