ADD some plugins + plugin config

--- a/MyConfigs/.ideavimrc
+++ b/MyConfigs/.ideavimrc
@@ -3,7 +3,7 @@
 
 " Plugins
 set surround
-"set highlightedyank
+set highlightedyank
 set NERDTree
 set multiple-cursors
 set commentary
@@ -14,6 +14,11 @@ set textobj-entire
 set argtextobj
 set ReplaceWithRegister
 set exchange
+
+" Plugins Settings
+"let g:highlightedyank_highlight_duration = "-1"
+"let g:highlightedyank_highlight_color = "rgba(102, 204, 255, 155)"
+let g:highlightedyank_highlight_color = "rgba(57, 197, 187, 155)"
 
 " Vim Settings
 set scrolloff=5
