--- a/MyConfigs/.ideavimrc
+++ b/MyConfigs/.ideavimrc
@@ -81,7 +81,7 @@ map <leader>sh <Action>(MoveTabLeft)
 map <leader>sj <Action>(MoveTabDown)
 map <leader>sk <Action>(MoveTabUp)
 map <leader>sl <Action>(MoveTabRight)
-map <leader>lc <Action>(leetcode.NavigatorActionsMenu)
+map <leader>l <Action>(leetcode.NavigatorActionsMenu)
 map <leader>hl <Action>(HighlightUsagesInFile)
 map <leader>c <Action>(CommentByLineComment)
 map <leader>qf <Action>(ShowIntentionActions)
