--- a/MyConfigs/.ideavimrc
+++ b/MyConfigs/.ideavimrc
@@ -83,6 +83,7 @@ map <leader>sk <Action>(MoveTabUp)
 map <leader>sl <Action>(MoveTabRight)
 map <leader>lm <Action>(leetcode.NavigatorActionsMenu)
 map <leader>lt <Action>(leetcode.NavigatorActionsToolbar)
+map <leader>ll <Action>(leetcode.editor.group)
 map <leader>hl <Action>(HighlightUsagesInFile)
 map <leader>c <Action>(CommentByLineComment)
 map <leader>qf <Action>(ShowIntentionActions)
